# sqlite-cmake

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  get-product-data.bash  import-releases.bash  print_libversion.c  product-data.csv  releases.csv  tag-all-releases.bash
.github/workflows/: ci-test.yaml
cmake/: MultipleChoice.cmake  SQLite3Config.cmake.in  SQLite3Config.cmake.in.license  multiple-choice.cmake  sqlite-config.cmake.in  sqlite3cfg.h.in  sqlite3cfg.h.in.license
source/: sqlite3.sha3sum
